Completed: OOP Advanced Enumerations and Attributes

--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -162,6 +162,35 @@
     <Compile Include="Advanced\StacksAndQueues\09.StackFibonacci.cs" />
     <Compile Include="Advanced\StacksAndQueues\10.SimpleTextEditor.cs" />
     <Compile Include="Advanced\StacksAndQueues\11.PoisonousPlants.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\01CardSuit\01CardSuit.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\02CardRank\02CardRank.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\0304CardPower\0304CardPower.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\0304CardPower\Card.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\05CardCompareTo\05CardCompareTo.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\05CardCompareTo\Card.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\06CustomEnumAttribute\06CustomEnumAttribute.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\07DeckOfCards\07DeckOfCards.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\08CardGame\08CardGame.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\08CardGame\Card.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\08CardGame\CardDeck.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\08CardGame\ErrorMessages.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\08CardGame\Player.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\09TrafficLights\09TrafficLights.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\09TrafficLights\TrafficLight.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\10CreateCustomClassAttribute\10CreateCustomClassAttribute.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\11InfernoInfinity.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Gems\Amethyst.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Weapons\Axe.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Builder.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Gems\Emerald.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Gem.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Builders\GemBuilder.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Item.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Weapons\Knife.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Gems\Ruby.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Weapons\Sword.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Weapon.cs" />
+    <Compile Include="OOP\Advanced\EnumerationsAndAttributes\11InfernoInfinity\Builders\WeaponBuilder.cs" />
     <Compile Include="OOP\Advanced\Generics\01GenericBoxOfString\01GenericBoxOfString.cs" />
     <Compile Include="OOP\Advanced\Generics\01GenericBoxOfString\Box.cs" />
     <Compile Include="OOP\Advanced\Generics\02GenericBoxOfInteger\02GenericBoxOfInteger.cs" />
@@ -393,6 +422,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <Compile Include="OOP\Basics\DefiningClasses\11.PokemonTrainer\11.PokemonTrainer.cs" />
+    <None Include="OOP\Advanced\EnumerationsAndAttributes\04. CSharp-OOP-Advanced-Enumerations-And-Attributes-Exercises.docx" />
     <None Include="OOP\Advanced\Generics\02. CSharp-OOP-Advanced-Generics-Exercises.docx" />
     <None Include="OOP\Advanced\InterfacesAndAbstraction\01. CSharp-OOP-Advanced-Interfaces-And-Abstraction-Exercises.docx" />
     <None Include="OOP\Basics\DefiningClasses\01. CSharp-OOP-Basics-Defining-Classes-Exercises.docx" />
